# src/contract/entities/contract.entity.ts
@@ -6,10 +6,12 @@ import {
   OneToOne,
   CreateDateColumn,
   UpdateDateColumn,
+  OneToMany,
 } from 'typeorm';
 import { User } from '../../user/entities/user.entity';
 import { Service } from '../../service/entities/service.entity';
 import { Review } from '../../review/entities/review.entity';
+import { Booking } from '../../booking/entities/booking.entity';
 
 export enum ContractStatus {
   PENDING = 'pending',
@@ -17,21 +19,31 @@ export enum ContractStatus {
   REJECTED = 'rejected',
   COMPLETED = 'completed',
   CANCELLED = 'cancelled',
+  PAID = 'paid',
 }
 
 @Entity()
 export class Contract {
-  @PrimaryGeneratedColumn()
-  id: number;
+  @PrimaryGeneratedColumn('uuid')
+  id: string;
 
-  @ManyToOne(() => User, (user) => user.contracts)
-  requester: User;
+  @ManyToOne(() => User)
+  client: User;
 
-  @ManyToOne(() => Service, (service) => service.contracts)
+  @ManyToOne(() => User)
+  provider: User;
+
+  @ManyToOne(() => Service)
   service: Service;
 
   @OneToOne(() => Review, (review) => review.contract)
   review: Review;
+
+  @OneToMany(() => Booking, (booking) => booking.contract)
+  bookings: Booking[];
+
+  @Column('decimal', { precision: 10, scale: 2 })
+  amount: number;
 
   @Column({
     type: 'enum',
@@ -45,6 +57,9 @@ export class Contract {
 
   @Column('decimal', { precision: 10, scale: 2 })
   agreedPrice: number;
+
+  @Column({ nullable: true })
+  stripePaymentIntentId: string;
 
   @CreateDateColumn()
   createdAt: Date;
